<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddChiTieuActivity">

    <TextView
        android:id="@+id/txtMieuTa"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/Text_ChiTieu1" />

    <EditText
        android:id="@+id/edtMieuTa2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Text_HintChiTieu1"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtNhap"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/Text_ChiTieu2" />

    <EditText
        android:id="@+id/edtChiTieu"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:ems="10"
        android:hint="@string/Text_HintChiTieu2"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPhanLoai"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:text="Phân loại" />

        <EditText
            android:id="@+id/edtPhanLoai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnQuayLai2"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnQuayLai" />

        <Button
            android:id="@+id/btnXacNhan2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnXacNhan" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="393dp"
        android:layout_height="384dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFood"
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="267dp"
            android:layout_marginLeft="267dp"
            android:layout_marginTop="193dp"
            android:clickable="true"
            app:srcCompat="@mipmap/food" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabMedicine"
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="267dp"
            android:layout_marginLeft="267dp"
            android:layout_marginTop="193dp"
            android:clickable="true"
            app:srcCompat="@mipmap/medicine" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabJoystick"
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="267dp"
            android:layout_marginLeft="267dp"
            android:layout_marginTop="193dp"
            android:clickable="true"
            app:srcCompat="@mipmap/joystick" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabHome"
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="267dp"
            android:layout_marginLeft="267dp"
            android:layout_marginTop="193dp"
            android:clickable="true"
            app:srcCompat="@mipmap/home" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPhanLoai"
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="267dp"
            android:layout_marginLeft="267dp"
            android:layout_marginTop="193dp"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_input_add" />

    </RelativeLayout>

</LinearLayout>